fix alignment of rock; get rid of ugly grey border on body.

--- a/src/site/templates/root/css/template.css
+++ b/src/site/templates/root/css/template.css
@@ -1,9 +1,5 @@
 @import url("fonts.css");
 
-body {
-  background-color: #bfbfbf;
-}
-
 /* background images */
 .sky {
 	height: 110pt;
@@ -15,12 +11,12 @@ body {
 	overflow: visible;
 	z-index: 10;
 	background: #785331 url('../images/dirt.png') repeat-x scroll top;
-        margin-bottom: -140pt;
+    margin-bottom: -160pt;
 }
 
 .rock {
 	background-color: #bfbfbf;
-	height: 140pt;
+	height: 160pt;
 	background: #bfbfbf url('../images/rock.png') repeat-x scroll top;
 	position: relative;
 }
